# SpectrogramGenAI

./: .gitignore  .pre-commit-config.yaml  2.0  Classifiers.py  LICENSE  README.md  birdnet_all_spec.py  ddpm_conditional_generate.py  diff_utils.py  main.py  pyproject.toml  requirements.txt  spec_vae.py  train_gan2.py
.github/workflows/: run_test.yml
postprocessing/: analyse_results.R  data_time_plot.R  neal_test_eval.R  paper_plots.R
scripts/: Classifiers.py  birdnet_all_spec.py  ddpm_conditional_generate.py  diff_modules.py  diff_utils.py  eval_best_classifiers.py  fad.py  frechet_audio_distance.py  gan_models.py  gen_specs.py  helpers.py  inception_score.py  paper_plots.R  spec_vae.py  time_test.py  train_acgan.py  train_classifiers.py  train_ddpm.py
src/: Classifiers.py  birdnet_all_spec.py  ddpm_conditional_generate.py  diff_modules.py  diff_utils.py  eval_best_classifiers.py  fad.py  gan_models.py  gen_specs.py  helpers.py  inception_score.py  spec_vae.py  train_acgan.py  train_classifiers.py  train_ddpm.py
tests/: test_main.py
