[project]
name = "spectrogramgenai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastprogress>=1.0.3",
    "frechet-audio-distance>=0.3.3",
    "ipython>=9.8.0",
    "librosa>=0.11.0",
    "matplotlib>=3.10.7",
    "numpy>=1.26.4",
    "pandas>=2.3.3",
    "pillow>=12.2.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "torchmetrics>=1.8.2",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "wandb>=0.23.1",
]

[dependency-groups]
dev = [
    "coverage>=7.12.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.3",
    "ruff>=0.14.7",
]

[tool.uv]
constraint-dependencies = [
    "annotated-types>=0.7.0",
    "asttokens>=3.0.1",
    "audioread>=3.1.0",
    "braceexpand>=0.1.7",
    "certifi>=2025.11.12",
    "cffi>=2.0.0",
    "cfgv>=3.5.0",
    "charset-normalizer>=3.4.4",
    "click>=8.3.1",
    "colorama>=0.4.6",
    "contourpy>=1.3.3",
    "cycler>=0.12.1",
    "decorator>=5.2.1",
    "distlib>=0.4.0",
    "einops>=0.8.1",
    "encodec>=0.1.1",
    "executing>=2.2.1",
    "filelock>=3.20.0",
    "fonttools>=4.61.0",
    "fsspec>=2025.12.0",
    "ftfy>=6.3.1",
    "gitdb>=4.0.12",
    "gitpython>=3.1.50",
    "h5py>=3.15.1",
    "huggingface-hub>=0.36.0",
    "identify>=2.6.15",
    "idna>=3.15",
    "iniconfig>=2.3.0",
    "ipython-pygments-lexers>=1.1.1",
    "jedi>=0.19.2",
    "jinja2>=3.1.6",
    "joblib>=1.5.2",
    "kiwisolver>=1.4.9",
    "laion-clap>=1.1.7",
    "lazy-loader>=0.4",
    "lightning-utilities>=0.15.2",
    "llvmlite>=0.45.1",
    "markupsafe>=3.0.3",
    "matplotlib-inline>=0.2.1",
    "mpmath>=1.3.0",
    "msgpack>=1.2.1",
    "networkx>=3.6",
    "nodeenv>=1.9.1",
    "numba>=0.62.1",
    "packaging>=25.0",
    "parso>=0.8.5",
    "platformdirs>=4.5.0",
    "pluggy>=1.6.0",
    "pooch>=1.8.2",
    "progressbar>=2.5",
    "prompt-toolkit>=3.0.52",
    "protobuf>=6.33.5",
    "pure-eval>=0.2.3",
    "pycparser>=2.23",
    "pydantic>=2.12.5",
    "pydantic-core>=2.41.5",
    "pygments>=2.20.0",
    "pyparsing>=3.2.5",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
    "pyyaml>=6.0.3",
    "regex>=2025.11.3",
    "requests>=2.33.0",
    "resampy>=0.4.3",
    "safetensors>=0.7.0",
    "scipy>=1.16.3",
    "sentry-sdk>=2.47.0",
    "setuptools>=80.9.0",
    "six>=1.17.0",
    "smmap>=5.0.2",
    "soundfile>=0.13.1",
    "soxr>=1.0.0",
    "stack-data>=0.6.3",
    "sympy>=1.14.0",
    "threadpoolctl>=3.6.0",
    "tokenizers>=0.22.1",
    "torchaudio>=2.9.1",
    "torchlibrosa>=0.1.0",
    "traitlets>=5.14.3",
    "transformers>=5.13.0",
    "typing-extensions>=4.15.0",
    "typing-inspection>=0.4.2",
    "tzdata>=2025.2",
    "urllib3>=2.6.0",
    "virtualenv>=20.36.1",
    "wcwidth>=0.2.14",
    "webdataset>=1.0.2",
    "wget>=3.2",
]

[tool.black]
line-length = 120

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "E501", "E701"]   # use a list, not a comma-separated string
