[project]
name = "spectrogramgenai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "frechet-audio-distance>=0.3.3",
    "ipython>=9.8.0",
    "librosa>=0.11.0",
    "matplotlib>=3.10.7",
    "numpy>=1.26.4",
    "pandas>=2.3.3",
    "pillow>=12.2.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "torchmetrics>=1.8.2",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "wandb>=0.23.1",
]

[dependency-groups]
dev = [
    "coverage>=7.12.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.3",
    "ruff>=0.14.7",
]

[tool.black]
line-length = 120

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "E501", "E701"]   # use a list, not a comma-separated string
